Version 0.1.8
-------------

- gnu: define PLATFORM_UNIX
- gnu: implemented dependencies tracking
- msvc*: use /EHsc instead of /GX, which is deprecated in VC8 (Vadim Zeitlin)
- added scripts for making Debian package (Vadim Zeitlin)
- gnu: fixed <module> targets to not have "lib" prefix in name


Version 0.1.7
-------------

- fixed running under Python 2.2 (Francesco Montorsi)
- fixed handling of "prepend" attribute on <set> command


Version 0.1.6
-------------

- autoconf: MetroWerks compiler support (David Elliott)
- fixed 'fake' preset to define <precomp-headers-location>
- workaround for a bug in aclocal that causes it to die when processing
  AC_BAKEFILE definition in bakefile.m4


Version 0.1.5
-------------

- new format: dmars_smake for DigitalMars's smake (Wlodzimierz ABX Skiba)
- msvc6prj, msevc4prj: change project names to be same as file names
- portability fix for datafiles module (Greg Noel)
- watcom: support <cxx-rtti> (Hans Van Leemputten)
- added <fragment> support to all makefile-based formats
- added category=path hint to options to make it possible to use options
  as argument to <include> etc.
- new format: gnu for GNU toolchain on Unix
- misc portability fixes on Unix (Michael Champigny)
- added BeOS support (thanks to information by Michael Champigny)
- improved performance when generating lots of makefiles using
  bakefile_gen by caching parsed XML files
- autoconf: fixed precompiled headers dependencies in case of multiple targets
- precompiled headers support for dmars and dmars_smake formats
  (based on work by Wlodzimierz ABX Skiba)
- autoconf: BSD make fixes in the format
- msvc6prj: fixed dependencies in project files 
- msvc6prj: <optimize>speed optimized for size and vice versa, fixed
- fixed win32 formats' "make clean" to delete precompiled headers files
- autoconf: fixed to not accumulate outdated content in autoconf_inc.m4
- msvc6prj, msevc4prj: don't ignore source files with unrecognized extension